<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/white_500"
    android:contentDescription="@string/counter_icon"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_activity_iv_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/counter_icon"
        app:srcCompat="@drawable/ic_calculator" />

    <TextView
        android:id="@+id/main_activity_tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/placeholder_number"
        android:textAlignment="center"
        android:textColor="@color/blue_700"
        android:textSize="72sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_activity_et_number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/blue_700"
            android:textColorHint="@color/blue_700"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/main_activity_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#009688"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/submit_btn"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/main_activity_btn_random_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#009688"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/random_btn"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_activity_btn_decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#009688"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/decrement_btn"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/main_activity_et_dec_inc_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="3"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/placeholder_dec_inc"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColorHint="@color/blue_700"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/main_activity_btn_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#009688"
            android:text="@string/increment_btn"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_activity_tv_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/placeholder_summary"
        android:textColor="@color/blue_700"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>